CDOC2-131: semantics identifier returned to authenticate endpoint
